<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <ImageView
            android:layout_width="197dp"
            android:layout_height="70dp"
            android:src="@drawable/top_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/entryTitle"
            android:textColor="@color/btn"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entryTxt"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="@color/txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmailAddressEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/regHintEmail"
            android:textColor="@color/txt"
            android:textColorHighlight="@color/txt"
            android:textColorHint="@color/txtLight"
            android:theme="@style/MyEditText"
            android:ems="10"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/textEntryMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btn"
            android:text="@string/mailEntry"
            android:visibility="gone"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/editTextPasswordEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/regHintPass"
            android:textColor="@color/txt"
            android:textColorHighlight="@color/txt"
            android:textColorHint="@color/txtLight"
            android:theme="@style/MyEditText"
            android:ems="10"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/textEntryPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btn"
            android:text="@string/passEntry"
            android:layout_marginLeft="5dp"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guestInput"
            android:textSize="20dp"
            android:textColor="@color/txt"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/btn"/>

    </LinearLayout>

</LinearLayout>