<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Regstration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <ImageView
            android:layout_width="197dp"
            android:layout_height="70dp"
            android:src="@drawable/top_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/regestration"
            android:textColor="@color/btn"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regestrTxt"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="@color/txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/guestHint"
            android:textColor="@color/txt"
            android:textColorHighlight="@color/txt"
            android:textColorHint="@color/txtLight"
            android:theme="@style/MyEditText"
            android:ems="10"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/regHintEmail"
            android:textColor="@color/txt"
            android:textColorHighlight="@color/txt"
            android:textColorHint="@color/txtLight"
            android:theme="@style/MyEditText"
            android:ems="10"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/regHintPass"
            android:textColor="@color/txt"
            android:textColorHighlight="@color/txt"
            android:textColorHint="@color/txtLight"
            android:theme="@style/MyEditText"
            android:ems="10"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonRegestration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regerInput"
            android:textSize="20dp"
            android:textColor="@color/txt"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/btn"/>

        <TextView
            android:id="@+id/textEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btn"
            android:text="@string/entryReg"
            android:layout_gravity="center"
            android:textSize="17dp"
            android:padding="5dp"
            android:background="@drawable/click_button"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</LinearLayout>