<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="197dp"
            android:layout_height="70dp"
            android:src="@drawable/top_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/secondTitle"
            android:textColor="@color/btn"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondTxt"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="@color/txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondZero"
                android:textSize="18dp"
                android:textColor="@color/txt"
                tools:ignore="MissingConstraints"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:backgroundTint="@color/btn"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <Button
                android:id="@+id/buttonTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/secondTest"
                android:textColor="@color/txt"
                android:textSize="18dp"
                tools:ignore="MissingConstraints"
                android:padding="5dp"
                android:backgroundTint="@color/btn"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>